--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ async-task = "4.0.2"
 fastrand = "1.3.4"
 futures-io = { version = "0.3.28", default-features = false, features = ["std"] }
 futures-lite = { version = "1.11.0", default-features = false }
-log = "0.4.17"
 piper = "0.2.0"
+tracing = { version = "0.1.37", default-features = false }
 
 [dev-dependencies]
 futures-lite = "1.11.0"
