--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ name = "blocking"
 version = "1.3.1"
 authors = ["Stjepan Glavina <stjepang@gmail.com>"]
 edition = "2018"
-rust-version = "1.48"
+rust-version = "1.56"
 description = "A thread pool for isolating blocking I/O in async programs"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/smol-rs/blocking"
@@ -21,8 +21,8 @@ async-task = "4.0.2"
 fastrand = "1.3.4"
 futures-io = { version = "0.3.28", default-features = false, features = ["std"] }
 futures-lite = { version = "1.11.0", default-features = false }
-log = "0.4.17"
 piper = "0.2.0"
+tracing = { version = "0.1.37", default-features = false }
 
 [dev-dependencies]
 futures-lite = "1.11.0"
