--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ async-task = "4.0.2"
 futures-io = { version = "0.3.28", default-features = false, features = ["std"] }
 futures-lite = { version = "2.0.0", default-features = false }
 piper = "0.2.0"
-tracing = { version = "0.1.37", default-features = false }
+tracing = { version = "0.1.37", default-features = false, optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-lock = "3.0.0"
